# DOOM-Virus-Scanner

./: CMakeLists.txt
lib/: CMakeLists.txt
lib/glad/: CMakeLists.txt
lib/glad/include/glad/: gl.h
lib/glad/src/: gl.c
src/: CMakeLists.txt  main.cpp
